--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "portfolio-2022-frontend",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "16.11.12",
-    "@types/react": "17.0.37",
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
-    "typescript": "4.5.3"
-  }
+    "name": "portfolio-2022-frontend",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "prepare": "husky install",
+        "start": "next start -p 5000",
+        "prettier-format": "prettier --config .prettierrc \"src/**/*.{js,jsx,ts,tsx}\" --write",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "next": "12.0.7",
+        "react": "17.0.2",
+        "react-dom": "17.0.2"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^15.0.0",
+        "@commitlint/config-conventional": "^15.0.0",
+        "@types/node": "16.11.12",
+        "@types/react": "17.0.37",
+        "eslint": "8.4.1",
+        "eslint-config-next": "12.0.7",
+        "husky": "^7.0.0",
+        "prettier": "^2.5.1",
+        "typescript": "4.5.3",
+        "@typescript-eslint/eslint-plugin": "^5.6.0",
+        "@typescript-eslint/parser": "^5.6.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-no-loops": "^0.3.0",
+        "eslint-plugin-prettier": "^4.0.0"
+    },
+    "husky": {
+        "hooks": {
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+        }
+    }
 }
