--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
         "@commitlint/config-conventional": "^15.0.0",
         "@types/node": "16.11.12",
         "@types/react": "17.0.37",
-        "eslint": "8.4.1",
-        "eslint-config-next": "12.0.7",
-        "husky": "^7.0.0",
-        "prettier": "^2.5.1",
-        "typescript": "4.5.3",
         "@typescript-eslint/eslint-plugin": "^5.6.0",
         "@typescript-eslint/parser": "^5.6.0",
+        "autoprefixer": "^10.4.0",
+        "eslint": "8.4.1",
+        "eslint-config-next": "12.0.7",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-no-loops": "^0.3.0",
-        "eslint-plugin-prettier": "^4.0.0"
+        "eslint-plugin-prettier": "^4.0.0",
+        "husky": "^7.0.0",
+        "postcss": "^8.4.5",
+        "prettier": "^2.5.1",
+        "tailwindcss": "^3.0.2",
+        "typescript": "4.5.3"
     },
     "husky": {
         "hooks": {
