--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,3 @@
 {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint", "no-loops", "prettier"],
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/eslint-recommended",
-        "plugin:@typescript-eslint/recommended",
-        "prettier"
-    ],
-    "rules": {
-        "no-loops/no-loops": 2, // 2 means throw an ERROR
-        "no-console": 1,
-        "no-unused-vars": 2
-    },
-    "globals": {
-        "document": false
-    },
-    "env": {
-        "browser": true,
-        "node": true
-    }
+    "extends": "next/core-web-vitals"
 }
