chore: added tailwind and paths

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,11 @@
     "parser": "@typescript-eslint/parser",
     "plugins": ["@typescript-eslint", "no-loops", "prettier"],
     "extends": [
-        "next",
         "eslint:recommended",
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended",
-        "prettier"
+        "prettier",
+        "next"
     ],
     "rules": {
         "no-loops/no-loops": 2, // 2 means throw an ERROR
