--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dependencies": {
         "next": "12.0.7",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "sass": "^1.45.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^15.0.0",
