--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "gsap": "^3.9.1",
         "next": "12.0.7",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "sass": "^1.45.0"
+        "react-transition-group": "^4.4.2",
+        "sass": "^1.45.0",
+        "three": "^0.136.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^15.0.0",
         "@commitlint/config-conventional": "^15.0.0",
         "@types/node": "16.11.12",
         "@types/react": "17.0.37",
+        "@types/react-transition-group": "^4.4.4",
+        "@types/three": "^0.135.0",
         "@typescript-eslint/eslint-plugin": "^5.6.0",
         "@typescript-eslint/parser": "^5.6.0",
         "autoprefixer": "^10.4.0",
